--- a/private/appconfig.ini
+++ b/private/appconfig.ini
@@ -16,7 +16,7 @@ names = localhost:*, 127.0.0.1:*, *:*, *
 [db]
 uri       = sqlite://storage.sqlite
 migrate   = true
-pool_size = 10  
+pool_size = 10
 
 ; smtp address and credentials
 [smtp]
@@ -32,3 +32,8 @@ heartbeat = 1
 
 [google]
 analytics_id =
+
+[cognito_db]
+uri       = sqlite://cognito.sqlite
+migrate   = true
+pool_size = 10
