--- a/private/appconfig.ini
+++ b/private/appconfig.ini
@@ -37,3 +37,11 @@ analytics_id =
 uri       = sqlite://cognito.sqlite
 migrate   = true
 pool_size = 10
+
+[session]
+secret = secret
+expiration = 3600
+
+[jwt]
+secret = secret
+expiration = 3600
