--- a/private/appconfig.ini
+++ b/private/appconfig.ini
@@ -1,9 +1,9 @@
 ; App configuration
 [app]
-name        = Welcome
+name        = pandaCognito
 author      = Your Name <you@example.com>
-description = a cool new app
-keywords    = web2py, python, framework
+description = pandaCognito
+keywords    = web2py, python, framework, cognito
 generator   = Web2py Web Framework
 production  = false
 toolbar     = false
